# pyrobot

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  basics.html  help.html  index.html  install_all.sh  install_pyrobot.sh  requirements.txt  requirements_python2.txt  requirements_python3.txt  setup.py  sitemap.xml  users.html
pyrobot_bridge/: CMakeLists.txt  package.xml  setup.py
pyrobot_bridge/action/: Moveit.action
pyrobot_bridge/nodes/: kinematics.py  moveit_bridge.py
pyrobot_bridge/srv/: FkCommand.srv  IkCommand.srv
robots/LoCoBot/locobot_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
robots/LoCoBot/locobot_calibration/config/: default.json
robots/LoCoBot/locobot_calibration/launch/: ar_track_alvar_calibration.launch  calibrate.launch  calibration_publish.launch  test_ar_track_alvar_calibration.launch  test_calibrate.launch
robots/LoCoBot/locobot_calibration/nodes/: calibration_publish_transforms.py
robots/LoCoBot/locobot_calibration/scripts/: artag_camera.py  collect_calibration_data.py  solve_for_calibration_params.py
robots/LoCoBot/locobot_control/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBot/locobot_control/config/: dynamixels.yaml  dynamixels_teleop.yaml  dynamixels_tuned.yaml  teleop.yaml
robots/LoCoBot/locobot_control/launch/: ar_marker.launch  azzure_driver.launch  change_id.launch  dynamixel_controllers.launch  hector_slam_rplidar.launch  main.launch  main_debug.launch  navigation.launch  position_control_arm.launch  rtabmap.launch  vslam_debug.launch
robots/LoCoBot/locobot_control/nodes/: joystick_robot_teleop_server.py  keyboard_teleop_client.py  pointrobot3factor_ros_server.py  robot_teleop_server.py
robots/LoCoBot/locobot_control/src/: locobot_controller.cpp
robots/LoCoBot/locobot_control/srv/: JointCommand.srv
robots/LoCoBot/locobot_description/: CMakeLists.txt  package.xml  urdf.rviz
robots/LoCoBot/locobot_description/config/: joint_names_locobot_description.yaml
robots/LoCoBot/locobot_description/launch/: display.launch  gazebo.launch
robots/LoCoBot/locobot_description/meshes/: ar_tag.STL  arm_base_link.STL  base_link.STL  battery.STL  cam_mount.STL  elbow_link.STL  finger_l.STL  finger_r.STL  forearm_link.STL  gripper_link.STL  main_body.dae  mobile_base.STL  plate_1.STL  plate_2.STL  plate_bottom.stl  plate_top.STL  roll_link.STL  shoulder_link.STL  tilt_link.STL  wheel.dae  wrist_link.STL  yaw_link.STL
robots/LoCoBot/locobot_description/urdf/: .gitignore  arm.urdf.xacro  base.urdf.xacro  cam.urdf.xacro  caster.urdf.xacro  cliff.urdf.xacro  cmu_locobot_description.urdf  interbotix_locobot_description.urdf  locobot_description.urdf  locobot_description_xacro.urdf.xacro  locobot_lite_description.urdf  wheel.urdf.xacro
robots/LoCoBot/locobot_gazebo/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBot/locobot_gazebo/config/: control.yaml  robotic_arm_gazebo_joint_states.yaml
robots/LoCoBot/locobot_gazebo/launch/: empty_world.launch  gazebo_locobot.launch  gazebo_locobot_control.launch  gazebo_moveit_main.launch
robots/LoCoBot/locobot_gazebo/long_barrier.sdf/: model.config  model.sdf
robots/LoCoBot/locobot_gazebo/models/: model.config  model.sdf
robots/LoCoBot/locobot_gazebo/scripts/: reset_sim_example.py  tune_pid.py
robots/LoCoBot/locobot_gazebo/src/: gazebo_locobot_control.cpp
robots/LoCoBot/locobot_gazebo/worlds/: cube.world  ground.world  room.world  test_room.world
robots/LoCoBot/locobot_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robots/LoCoBot/locobot_lite_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  locobot_lite.srdf  ompl_planning.yaml
robots/LoCoBot/locobot_lite_moveit_config/launch/: demo.launch  demo_fake.launch  fake_moveit_controller_manager.launch.xml  locobot_description_moveit_controller_manager.launch.xml  locobot_description_moveit_sensor_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
robots/LoCoBot/locobot_navigation/base_navigation/: CMakeLists.txt  package.xml  setup.py
robots/LoCoBot/locobot_navigation/orb_slam2_ros/: CMakeLists.txt  README.md  package.xml  setup.py
robots/LoCoBot/turtlebot_controller/: CMakeLists.txt  README.md  package.xml
robots/LoCoBot/turtlebot_controller/launch/: turtlebot.launch  turtlebot_controller_node.launch
robots/LoCoBot/turtlebot_controller/src/: turtlebot_controller_node.cpp
robots/azure_kinect_pybind/: CMakeLists.txt  azure_kinect_pybind.cpp  ndarray_converter.cpp  ndarray_converter.h
robots/azure_kinect_pybind/conda.recipe/: meta.yaml
robots/azure_kinect_pybind/src/: azure_kinect_camera.cpp  azure_kinect_camera.h  camera.cpp  camera.h
robots/franka/franka_control_msgs/: CMakeLists.txt  package.xml
robots/franka/franka_control_msgs/msg/: EndPointState.msg  JointCommand.msg  JointControllerStates.msg  JointLimits.msg  RobotState.msg
robots/franka/franka_interface/: CMakeLists.txt  epydoc.config  package.xml  setup.py  state_controller_plugin.xml
robots/franka/franka_interface/config/: basic_controllers.yaml  robot_config.yaml
robots/franka/franka_interface/launch/: main.launch
robots/franka/franka_interface/scripts/: enable_robot.py  joint_positions_keyboard.py  move_to_neutral.py  simple_gripper.py
robots/franka/franka_interface/src/: franka_control_node.cpp  motion_controller_interface.cpp  robot_state_controller.cpp
robots/franka/franka_interface/tests/: test_robot.py
robots/franka/franka_moveit/: CMakeLists.txt  README.md  package.xml  setup.py
robots/franka/franka_moveit/config/: moveit_demo.rviz
robots/franka/franka_panda_description/: CMakeLists.txt  README.md  package.xml
robots/franka/franka_ros_controllers/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
robots/franka/franka_tools/: CMakeLists.txt  README.md  package.xml  setup.py
(+726 files in other folders)
