<?xml version="1.0"?>
<package format="2">
  <name>pyrobot_bridge</name>
  <version>0.0.0</version>
  <description>The python3_bridge package</description>
  <maintainer email="kalyanv@fb.com">kalyanv</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
