<?xml version="1.0"?>
<package>
  <name>turtlebot_controller</name>
  <version>0.1.0</version>
  <description>Turtlebot controller</description>

  <maintainer email="mmukadam3@gatech.edu">Mustafa Mukadam</maintainer>
  <author email="mmukadam3@gatech.edu">Mustafa Mukadam</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
