<?xml version="1.0"?>
<package>
  <name>franka_moveit</name>
  <version>1.0.0</version>
  <description>
    franka_moveit package wrapping franka_moveit_config using franka_ros_interface.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>Apache 2.0</license>
  <author>Saif Sidhik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>panda_moveit_config</build_depend>
  <run_depend>panda_moveit_config</run_depend>

</package>
