<?xml version="1.0"?>
<package>
  <name>franka_panda_description</name>
  <version>0.0.1</version>
  <description>
    Description of Panda Robot from Franka Emika.
    This package contains the URDF and meshes describing Panda for Gazebo simulator.
  </description>

  <maintainer email="sxs1412@bham.ac.uk">
    Saif Sidhik
  </maintainer>
  <license>TODO</license>

  <author>Franka Emika</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rviz</run_depend>

</package>
