<?xml version="1.0"?>
<package>
  <name>franka_tools</name>
  <version>1.0.0</version>
  <description>The franka_tools package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sxs1412@bham.ac.uk">Saif Sidhik</maintainer>

  <license>Apache 2.0</license>

  <author email="sxs1412@bham.ac.uk">Saif Sidhik</author>
    
    
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>franka_interface</build_depend>
  <build_depend>franka_core_msgs</build_depend>
  <build_depend>franka_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>franka_interface</run_depend>
  <run_depend>franka_core_msgs</run_depend>
  <run_depend>franka_control</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>